@@ -32,34 +32,63 @@
     </parent>
 
     <modules>
-        <module>agriculture</module>
-        <module>commerce</module>
-        <module>defense</module>
-        <module>education</module>
-        <module>energy</module>
-        <module>health-and-human-services</module>
-        <module>homeland-security</module>
-        <module>housing-and-urban-development</module>
-        <module>justice</module>
-        <module>labor</module>
-        <module>state</module>
-        <module>the-interior</module>
-        <module>the-treasury</module>
-        <module>transportation</module>
-        <module>veterans-affairs</module>
+        <module>departments</module>
+        <module>dev-tools</module>
+        <module>common-services</module>
     </modules>
 
     <properties>
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <commons-lang3.version>3.8.1</commons-lang3.version>
+        <javax.activation.version>1.1.1</javax.activation.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.activation</groupId>
+                <artifactId>activation</artifactId>
+                <version>${javax.activation.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>11</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
